--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAPZDl7HYAG7BvG2ij5bCICLLiUbFD9doQ",
+    authDomain: "mhw-fashionista.firebaseapp.com",
+    databaseURL: "https://mhw-fashionista.firebaseio.com",
+    projectId: "mhw-fashionista",
+    storageBucket: "",
+    messagingSenderId: "622777216208"
+  };
+  firebase.initializeApp(config);
+</script>
   </body>
 </html>
